rename category to user
