# swagger-ui/dist/swagger.json
@@ -1,14 +1,14 @@
 {
   "swagger": "2.0",
   "paths": {
-    "/api/categories": {
+    "/api/users": {
       "get": {
-        "description": "Retrieves all categories.",
+        "description": "Retrieves all users.",
         "tags": [
-          "categories"
+          "users"
         ],
-        "summary": "Find all categories",
-        "operationId": "listCategories",
+        "summary": "Find all users",
+        "operationId": "listUsers",
         "parameters": [
           {
             "type": "string",
@@ -20,7 +20,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully retrieved categories.",
+            "description": "Successfully retrieved users.",
             "schema": {
               "$ref": "#/responses/webResponse"
             }
@@ -34,12 +34,12 @@
         }
       },
       "post": {
-        "description": "Creates a new category in the system.",
+        "description": "Creates a new user in the system.",
         "tags": [
-          "categories"
+          "users"
         ],
-        "summary": "Create a new category",
-        "operationId": "createCategory",
+        "summary": "Create a new user",
+        "operationId": "createUser",
         "parameters": [
           {
             "type": "string",
@@ -49,18 +49,18 @@
             "required": true
           },
           {
-            "description": "The category object to create.",
+            "description": "The user object to create.",
             "name": "body",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/CategoryCreateRequest"
+              "$ref": "#/definitions/UserCreateRequest"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully created category.",
+            "description": "Successfully created user.",
             "schema": {
               "$ref": "#/responses/webResponse"
             }
@@ -80,14 +80,14 @@
         }
       }
     },
-    "/api/categories/{categoryId}": {
+    "/api/users/{userId}": {
       "get": {
-        "description": "Retrieves a category by its ID.",
+        "description": "Retrieves a user by its ID.",
         "tags": [
-          "categories"
+          "users"
         ],
-        "summary": "Find a category by ID",
-        "operationId": "get",
+        "summary": "Find a user by ID",
+        "operationId": "getUser",
         "parameters": [
           {
             "type": "string",
@@ -98,21 +98,21 @@
           },
           {
             "type": "integer",
-            "description": "ID of the category to retrieve",
-            "name": "categoryId",
+            "description": "ID of the user to retrieve",
+            "name": "userId",
             "in": "path",
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully retrieved category.",
+            "description": "Successfully retrieved user.",
             "schema": {
               "$ref": "#/responses/webResponse"
             }
           },
           "404": {
-            "description": "Category not found.",
+            "description": "User not found.",
             "schema": {
               "$ref": "#/responses/errorResponse"
             }
@@ -126,12 +126,12 @@
         }
       },
       "put": {
-        "description": "Updates an existing category in the system.",
+        "description": "Updates an existing user in the system.",
         "tags": [
-          "categories"
+          "users"
         ],
-        "summary": "Update an existing category",
-        "operationId": "updateCategory",
+        "summary": "Update an existing user",
+        "operationId": "updateUser",
         "parameters": [
           {
             "type": "string",
@@ -142,24 +142,24 @@
           },
           {
             "type": "integer",
-            "description": "The ID of the category to update",
-            "name": "categoryId",
+            "description": "The ID of the user to update",
+            "name": "userId",
             "in": "path",
             "required": true
           },
           {
-            "description": "The updated category object",
+            "description": "The updated user object",
             "name": "body",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/CategoryUpdateRequest"
+              "$ref": "#/definitions/UserUpdateRequest"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully updated category.",
+            "description": "Successfully updated user.",
             "schema": {
               "$ref": "#/responses/webResponse"
             }
@@ -171,7 +171,7 @@
             }
           },
           "404": {
-            "description": "Category not found.",
+            "description": "User not found.",
             "schema": {
               "$ref": "#/responses/errorResponse"
             }
@@ -185,12 +185,12 @@
         }
       },
       "delete": {
-        "description": "Deletes a category from the system.",
+        "description": "Deletes an existing user from the system.",
         "tags": [
-          "categories"
+          "users"
         ],
-        "summary": "Delete a category",
-        "operationId": "deleteCategory",
+        "summary": "Delete an existing user",
+        "operationId": "deleteUser",
         "parameters": [
           {
             "type": "string",
@@ -201,21 +201,21 @@
           },
           {
             "type": "integer",
-            "description": "The ID of the category to delete",
-            "name": "categoryId",
+            "description": "ID of the user to delete",
+            "name": "userId",
             "in": "path",
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Category deleted successfully.",
+            "description": "Successfully deleted user.",
             "schema": {
               "$ref": "#/responses/webResponse"
             }
           },
           "404": {
-            "description": "Category not found.",
+            "description": "User not found.",
             "schema": {
               "$ref": "#/responses/errorResponse"
             }
@@ -231,15 +231,15 @@
     }
   },
   "definitions": {
-    "CategoryCreateRequest": {
-      "description": "CategoryCreateRequest represents the request payload for creating a category",
+    "UserCreateRequest": {
+      "description": "UserCreateRequest represents the request payload for creating a user",
       "type": "object",
       "required": [
         "name"
       ],
       "properties": {
         "name": {
-          "description": "Name of the category",
+          "description": "Name of the user",
           "type": "string",
           "maxLength": 100,
           "minLength": 1,
@@ -248,8 +248,8 @@
       },
       "x-go-package": "rest_api/internal/apps/register/model/web"
     },
-    "CategoryUpdateRequest": {
-      "description": "CategoryUpdateRequest represents the request payload for updating a category",
+    "UserUpdateRequest": {
+      "description": "UserUpdateRequest represents the request payload for updating a user",
       "type": "object",
       "required": [
         "id",
@@ -257,13 +257,13 @@
       ],
       "properties": {
         "id": {
-          "description": "ID of the category",
+          "description": "ID of the user",
           "type": "integer",
           "format": "int64",
           "x-go-name": "Id"
         },
         "name": {
-          "description": "Updated name of the category",
+          "description": "Updated name of the user",
           "type": "string",
           "maxLength": 200,
           "minLength": 1,
